2008-01-25  Tor Lillqvist  <tml@novell.com>

	* gui/Makefile.am (libevolution_calendar_la_LIBADD): Link with
	libefilterbar.

2008-01-24  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #402487

	* gui/cal-search-bar.c: (notify_e_cal_view_contains):
	Memory leak fix.

2008-01-22  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #337046

	* gui/dialogs/comp-editor.c: (get_attachment_list): Have a ticking
	filename for attachment, if the mime doesn't carry it.

2008-01-17  Dan Winship  <danw@gnome.org>

	* gui/itip-utils.c (itip_publish_comp): Port to libsoup 2.4. Plug
	a leak.

2008-01-17  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #509879

	* gui/e-memos.c: (struct _EMemosPrivate), (update_view_cb),
	(setup_widgets), (e_memos_destroy):
	Drop code to clear memo preview every 60 seconds.

2008-01-17  Suman Manjunath  <msuman@novell.com>

	** Fix for bug #426159

	* gui/alarm-notify/alarm-notify-dialog.c: (snooze_pressed_cb):
	* gui/alarm-notify/alarm-notify.glade: Allow users to snooze for 
	1+ hour 0 minutes. 

2008-01-15  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #333695

	* gui/print.c: (print_attendees): Print attendee name instead of email
	address if available.

2008-01-14  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #333695

	* gui/print.c: (get_type_as_string), (get_role_as_string),
	(print_attendees), (print_comp_draw_page):
	Helper functions to print attendees and their types and roles
	in detailed print of the event.

2008-01-14  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #507359

	* gui/e-meeting-time-sel.h: (struct _EMeetingTimeSelector):
	* gui/e-meeting-time-sel.c: (e_meeting_time_selector_class_init),
	(e_meeting_time_selector_destroy), (style_change_idle_func),
	(e_meeting_time_selector_style_set): Recalculate sizes in idle queue,
	which will ensure the style is propagated in list_view too, because we
	read from there the height of the row and the style isn't set there
	before it is set in our widget.
